# SproutSense

./: Capstone-power.step  README.md  docker-compose.yml  package-lock.json
.github/workflows/: web.yml
base_station/: platformio.ini
base_station/src/: main.cpp
firmware/: TSL2591.c  TSL2591.h  UV_Sensor_Main.c  all.ioc  firmware.ioc  lora.c  main.c
firmware/dynamic_byte_array/: dynamic_byte_array.ioc  main.c
ingest/: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  run.py
ingest/AI/: watering_prediction.py
ingest/ingest/: __init__.py  app.py  main.py
ingest/ingest/ai/: decision_tree_model.pkl  watering_prediction.py
ingest/ingest/config/: config.py
ingest/ingest/database/: db.py
ingest/ingest/migrations/versions/: 44e9aa564f93_new_tables.py  5878d6ef2aff_add_sensor_module_id.py  799f3d35f6c9_add_temp.py
ingest/ingest/models/: base_station.py  bps.py  log.py  sensor.py  sensor_data.py  sensor_module.py  sensor_readings.py  stress_test.py
ingest/ingest/mqtt/: handler.py  mqtt.py
ingest/ingest/routes/: __init__.py  ai_model.py  api.py  base_station.py  bps.py  data_ingestion.py  helloworld.py  log.py  ping.py  query.py  sensor_module.py
ingest/ingest/service/: base_station.py  bps.py  log.py  query.py  sensor.py  sensor_module.py  stress_test.py
ingest/scripts/: deploy.sh  run.sh
samd21/lora_recieve/: lora_recieve.ino
samd21/lora_send/: lora_send.ino
samd21/lora_uart/: lora_uart.ino
web/: README.md  index.html  netlify.toml  package-lock.json  package.json  tailwind.config.js  tsconfig.json
web/src/: App.tsx  index.css  (+1 more)
(+42 files in other folders)
